# wfx

./: .gitignore  README.md  pyproject.toml
configs/clusters/: dev.json
inputs/airflow_dags/data_processing/: workflow_setting.py
inputs/dbx_workflows/: data_processing_tasks_config.json
inputs/mappings/data_processing/: task_list_all.csv
notebooks/: playbook.ipynb
resources/jobs/: sample_databricks_etl.yml
src/wfx/: cli.py
src/wfx/constants/: settings.py
src/wfx/core/: converter.py
src/wfx/processors/: airflow.py  gsheet.py
