[tool.poetry]
name = "wfx"
version = "0.1.0"
description = "Convert Airflow DAGs to Databricks Asset Bundles"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "wfx", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
delta-spark = "^2.4.0"
pandas = "^2.0.0"
notebook = "^7.3.2"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = {extras = ["jupyter"], version = "^25.1.0"}
isort = "^5.0"
mypy = "^1.0"
pylint = "^2.17"

[tool.poetry.scripts]
dabconvert = "wfx.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"